--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
     --primary-color: #0A1128;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
+    --secondary-color: crimson; 
     --gap: 3rem;
 }
 
@@ -21,7 +22,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 2rem;
     color: var(--primary-color);
-    
+    line-height: 1.5rem;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -64,7 +65,7 @@ a{
 }
 
 .main-content {
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
     padding: var(--gap);
 }
@@ -73,14 +74,17 @@ a{
     min-height: 100vh;
 }
 
+.menu-spacing {
+    height: 6.5rem;
+}
+
 .menu {
-    background: var(--white-color);
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
     width: 100%;
-    border-bottom: 1px solid var(--light-gray-color);
+    border-bottom: 0.1rem solid var(--light-gray-color);
 
 
 }
@@ -90,6 +94,7 @@ a{
     justify-content: space-between;
     align-items: center;
     padding-top: 0;
+    z-index: 1;
     padding-bottom: 0;
 
 
@@ -125,11 +130,45 @@ a{
     left: 50%;
     width:0;
     height: 0.2rem;
-    background:crimson;
+    background: var(--secondary-color);
     transition: all 300ms ease-in-out;
 }
 
 .menu ul li a:hover::after {
     width: 50%;
     left: 25%;
+}
+
+.intro-content {
+    position: relative;
+    top: -7rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    align-items: center;
+    gap: var(--gap);
+    height: 100vh;
+}
+
+.intro-text-content, .intro-img{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    
+}
+
+.intro-text-content h2 {
+    font-size: 5rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 6rem;
+}
+
+.intro-text-content p {
+    line-height: 3rem;
+
+}
+
+.intro-img img{
+    max-width: 100%;
+    height: auto;
 }
