--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,7 +76,7 @@ p{
 .main-content {
     max-width: 120rem;
     margin: 0 auto;
-    padding: var(--gap);
+    padding: 8rem var(--gap);
 }
 
 .section{
@@ -151,11 +151,12 @@ p{
 .intro-content {
     position: relative;
     top: -7rem;
+    
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     align-items: center;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro-text-content, .intro-img{
@@ -168,15 +169,58 @@ p{
 
 .intro-img img{
     max-width: 100%;
-    height: auto;
+    min-height: auto;
+    margin-left: 6rem;
 }
 
 
 .top3-content{
     max-width: 64rem;
     display: flex;
-    flex-flow: column wrap;
+    /*flex-flow: column wrap;*/
+    flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: center;
     height: 100vh;
     text-align: center ;
+}
+
+.grid-one-content{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.grid-main-heading{
+    margin-bottom: 1rem;
+}
+
+.grid-description {
+    padding-bottom: 5rem ;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--gap);
+    counter-reset: grid-counter;
+}
+
+.grid h3 {
+    font-size: 3rem;
+    position:relative;
+    padding-left: 5rem;
+    padding-bottom: 3rem;
+}
+
+.grid h3:before {
+    counter-increment: grid-counter;
+    content: counter(grid-counter);
+    position: absolute;
+    font-size: 8rem;
+    font-style: italic;
+    top: -4rem;
+    left: -2rem;
+    transform: rotate(5deg);
 }
