Inclussão da página pricing com uma tabela e estilização

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -225,6 +225,8 @@ p{
     transform: rotate(5deg);
 }
 
+/*Galeria*/
+
 .gallery-img{
     width: 100%;
     max-width: 36rem;
@@ -238,4 +240,36 @@ p{
 
 .gallery-img img:hover {
     transform:translate(-3%,3%) scale(1.2) rotate(5deg);
+}
+
+
+/*Table*/
+
+.responsive-table{
+    overflow:hidden;
+    overflow-y: auto;
+    
+}
+
+table{
+    min-width: 360px;
+    width: 100%;
+    border-collapse: collapse;
+}
+table caption {
+    font-style: italic;
+    font-size: 2rem;
+    text-align:center;
+    margin-bottom: 2rem;
+
+}
+table td, table th {
+    white-space: nowrap;
+    padding: 1rem;
+    text-align: left;
+    border: 0.1rem solid var(--light-gray-color);
+}
+
+tfoot td, table th{
+    background: var(--light-gray-color);
 }
