--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
     --primary-color: #0A1128;
     --white-color: #FFFFFF;
     --light-gray-color: #EEEEEE;
+    --medium-gray-color: #0c080846;
     --secondary-color: crimson; 
     --gap: 3rem;
 }
@@ -9,6 +10,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html{
@@ -150,8 +152,8 @@ p{
 
 .intro-content {
     position: relative;
-    top: -7rem;
-    
+    /*top: -7rem;*/
+
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     align-items: center;
@@ -272,4 +274,87 @@ table td, table th {
 
 tfoot td, table th{
     background: var(--light-gray-color);
+}
+
+.contact-form{
+    grid-column: span 2;
+
+}
+
+.contact-form .form-grid {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+}
+
+.form-grid legend{
+    font-style: italic;
+    font-size: 2rem;
+    margin-bottom: 3rem;
+}
+
+.form-group {
+    flex: 1 1 340px;
+    
+}
+
+.form-group label{
+    display: block;
+    margin-bottom: 1.5rem;
+}
+
+.form-group input, .form-group textarea{
+    border: none;
+    background: var(--white-color);
+    padding: 1.5rem 2rem;
+    width: 100%;
+    font-size: 3rem;
+}
+.form-group input:focus, .form-group textarea:focus{
+    box-shadow: 0 0 10px 2.5px var(--secondary-color);
+}
+
+body .full-width { 
+    width: 100%;
+    flex: 1 1 100%;
+}
+
+.form-group button {
+    border: 0.5rem solid var(--white-color);
+    background:none;
+    color: var(--white-color);
+    padding: 1.5rem 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    transition:all 300ms ease-in-out;
+}
+
+.form-group button:hover{
+    background:var(--white-color);
+    color: var(--primary-color);
+    
+}
+
+.form-group ::placeholder{
+    color: var(--medium-gray-color);
+}
+
+.footer{
+    text-align:center;
+    font-size: 1.6 rem;
+}
+
+.footer a {
+    color: var(--primary-color);
+}
+
+.heart {
+    color: var(--secondary-color);
+}
+
+.footer p{
+    margin:0;
+    padding:3rem;
 }
