--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,7 +183,7 @@ p{
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center ;
 }
 
@@ -357,4 +357,22 @@ body .full-width {
 .footer p{
     margin:0;
     padding:3rem;
+}
+
+
+@media (max-width: 800px){
+    .intro-content, .grid {
+        grid-template-columns: 1fr;
+    }
+    .gallery-img{
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;   
+    }
+    .gallery-img img{
+        width: 100%;
+    }
+    .grid-one-content{
+        display: block;
+    }
 }
